--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <meta name="robots" content="noindex">
-    <title>StackOverflow Clone</title>
+    <title>AskMe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
